# chisat

./: Cargo.toml
chimc/: Cargo.toml
chimc/src/: lib.rs
chisat/: Cargo.toml
chisat-cli/: Cargo.toml
chisat-cli/src/: main.rs
chisat/src/: dimacs_cnf.rs  ir.rs  lib.rs  solvers.rs
chisat/src/dimacs/: parser.rs
chisat/src/dimacs/parser/: transposing_peekable.rs
chisat/src/dimacs_cnf/: parser.rs  serializer.rs
chisat/src/dimacs_cnf/parser/: transposing_peekable.rs
chismt/: Cargo.toml
chismt/src/: ir.rs  lib.rs  tseitin_transformation.rs
cnf/: small-unsat.cnf  tiny-sat-03.cnf  tiny-sat.cnf
src/: lib.rs  main.rs
