[package]
name = "chismt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
chisat = { path = "../chisat" }
quickcheck = "1"
quickcheck_macros = "1"
typed-arena = "2.0.2"
variant_count = "1.1"

[dependencies]
